# sag

./: .env.example  .gitignore  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  LICENSE  Makefile  README-CN.md  README.md  compose.postgres.yaml  compose.yaml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/muse_api/: __init__.py  enums.py  main.py
apps/api/muse_api/connectors/: __init__.py  base.py  file_upload.py  registry.py  web.py
apps/api/muse_api/core/: config.py  db.py  deps.py  errors.py  logging.py  security.py
apps/api/muse_api/generation/: __init__.py  llm.py  persona.py  prompt.py
apps/api/muse_api/jobs/: __init__.py  inproc.py  tasks.py
apps/api/muse_api/sag/: __init__.py  config_builder.py  dto.py  engine_manager.py  errors.py
apps/api/muse_api/schemas/: auth.py  chat.py  document.py  job.py  namespace.py  search.py  soul.py  source.py
apps/api/muse_api/services/: auth_service.py  chat_service.py  document_service.py  insight_service.py  (+3 more)
apps/api/packaging/: sag-api.spec
apps/api/sag_agent/: __init__.py  loop.py  runtime.py  store.py  tools.py  types.py
apps/api/sag_api/: __init__.py  __main__.py  branding.py  desktop.py  enums.py  main.py  sidecar.py
apps/api/tests/: conftest.py  test_access_key.py  test_agent_runtime.py  test_agent_tools.py  test_agentic.py  test_agents.py  test_api_smoke.py  test_ask_stream.py  test_audit.py  test_client_form.py  test_connectors.py  test_document_parsing.py  test_document_resume.py  test_engine_data_version.py  test_experience.py  test_gaps.py  test_hardening.py  test_insights.py  test_local_onboarding.py  test_maintenance_mode.py  test_mcp.py  test_message_pagination.py  test_migrations.py  test_paths_config.py  test_quick_model_setup.py  test_retrieval_relevance.py  test_search_strategy.py  test_search_stream.py  test_settings.py  test_sidecar.py  test_souls.py  test_storage.py  test_team.py  test_thread_pagination.py  test_timestamps.py  test_traceability.py  test_units.py  test_universe.py  test_universe_engine.py  test_universe_rebuild_queue.py
apps/api/zleap_api/: __init__.py  enums.py  main.py
apps/desktop/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.dev.conf.json
octx/: .gitignore  GLOSSARY.md  LICENSE  README.md  creating-octx.md  exporting-octx.md  importing-octx.md  opening-validating-octx.md  pyproject.toml  python-api.md  sag-structured-v0.1.md  sag-structured-v1.md  sag.md  spec-v0.1.md  spec-v1.md  tooling-lifecycle.md
octx/api/: archive-limits.md  cli.md  create-octx.md  create-result.md  document.md  errors.md  models-and-limits.md  octx-package.md  open-octx.md  overview.md  unpack-octx.md  validate-octx.md  validation-report.md
octx/schemas/: README.md
octx/schemas/0.1/: event-entity.schema.json  manifest.schema.json  vector-config.schema.json
octx/schemas/1.0/: chunk-event.schema.json  chunk.schema.json  entity.schema.json  event.schema.json
octx/site/: README.md  next.config.mjs  package-lock.json  package.json
octx/site/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
octx/site/components/: code-block.tsx  doc-actions.tsx  doc-content.tsx  docs-mobile-nav.tsx  docs-shell.tsx  docs-sidebar.tsx  package-visual.tsx  search-dialog.tsx  site-footer.tsx  site-header.tsx  theme-toggle.tsx
octx/site/lib/: docs.ts  site-config.ts  types.ts
octx/site/public/: llms-full.txt  llms.txt
octx/site/scripts/: sync-content.mjs
octx/src/octx/: __init__.py  __main__.py  _documents.py  _paths.py  _schemas.py  _strict.py  cli.py  creation.py  errors.py  models.py  package.py  unpack.py  validation.py
octx/tests/: conftest.py  test_boundaries.py  test_cli.py  test_conformance.py  test_core.py  test_package.py  test_security.py  test_structured.py  test_vectors.py  test_zip_limits.py
(+712 files in other folders)
