[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "octx"
version = "0.1.0"
description = "Reference implementation for Open Context"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "OCTX contributors" }]
keywords = ["octx", "context", "knowledge", "agents", "okf"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "jsonschema>=4.21",
  "PyYAML>=6.0.1",
  "rfc8785>=0.1.4",
  "uuid6>=2024.7.10",
]

[project.optional-dependencies]
vectors = ["pyarrow>=15"]
dev = [
  "build>=1.2",
  "pyarrow>=15",
  "pytest>=8.2",
  "ruff>=0.9",
]

[project.scripts]
octx = "octx.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/octx"]

[tool.hatch.build.targets.wheel.force-include]
"schemas" = "octx/schemas"

[tool.hatch.build.targets.sdist]
include = [
  "/src/octx",
  "/schemas",
  "/tests",
  "/README.md",
  "/GLOSSARY.md",
  "/LICENSE",
  "/api",
  "/sag.md",
  "/sag-structured-v0.1.md",
  "/spec-v0.1.md",
  "/tooling-lifecycle.md",
  "/pyproject.toml",
]
exclude = ["/site"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
