[project]
name = "sag-api"
version = "0.1.0"
description = "sag — 开源知识库平台后端（FastAPI + zleap-sag）"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.8",
    "bcrypt>=4.1",
    "python-multipart>=0.0.9",
    "sse-starlette>=2.1",
    "httpx>=0.27",
    "openai>=1.40",
    "zleap-sag>=0.7.1",
    "alembic>=1.13",
    "trafilatura>=1.8",
    "mcp>=1.28,<2",
]

[project.optional-dependencies]
postgres = ["asyncpg>=0.29", "zleap-sag[postgres]>=0.7.1"]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "anyio>=4.4",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sag_api", "sag_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults
